@@ -2,7 +2,7 @@
 % vim: ft=mercury ts=4 sw=4 et
 %---------------------------------------------------------------------------%
 % Copyright (C) 1995-1997, 1999-2001, 2004-2006, 2010-2011 The University of Melbourne.
-% Copyright (C) 2013-2018 The Mercury team.
+% Copyright (C) 2013-2020 The Mercury team.
 % This file is distributed under the terms specified in COPYING.LIB.
 %---------------------------------------------------------------------------%
 %
@@ -203,6 +203,12 @@
 :- mode foldl(pred(in, in, di, uo) is semidet, in, di, uo) is semidet.
 :- mode foldl(pred(in, in, in, out) is nondet, in, in, out) is nondet.
 
+    % foldl_keys(Func List, Start) = End calls Func
+    % with each key in List, working left-to-right, and an accumulator
+    % whose initial value is Start, and returns the final value in End.
+    %
+:- func foldl_keys(func(K, A) = A, assoc_list(K, V), A) = A.
+
     % foldl_keys(Pred, List, Start End) calls Pred
     % with each key in List, working left-to-right, and an accumulator
     % whose initial value is Start, and returns the final value in End.
@@ -216,6 +222,12 @@
 :- mode foldl_keys(pred(in, di, uo) is semidet, in, di, uo) is semidet.
 :- mode foldl_keys(pred(in, in, out) is multi, in, in, out) is multi.
 :- mode foldl_keys(pred(in, in, out) is nondet, in, in, out) is nondet.
+
+    % foldl_values(Func List, Start) = End calls Func
+    % with each value in List, working left-to-right, and an accumulator
+    % whose initial value is Start, and returns the final value in End.
+    %
+:- func foldl_values(func(V, A) = A, assoc_list(K, V), A) = A.
 
     % foldl_values(Pred, List, Start End) calls Pred
     % with each value in List, working left-to-right, and an accumulator
@@ -534,11 +546,23 @@ foldl(P, [K - V | KVs], !A) :-
     P(K, V, !A),
     foldl(P, KVs, !A).
 
+foldl_keys(_F, [], A) = A.
+foldl_keys(F, [KV | KVs], !.A) = !:A :-
+    KV = K - _V,
+    !:A = F(K, !.A),
+    !:A = assoc_list.foldl_keys(F, KVs, !.A).
+
 foldl_keys(_P, [], !A).
 foldl_keys(P, [KV | KVs], !A) :-
     KV = K - _V,
     P(K, !A),
     assoc_list.foldl_keys(P, KVs, !A).
+
+foldl_values(_F, [], A) = A.
+foldl_values(F, [KV | KVs], !.A) = !:A :-
+    KV = _K - V,
+    !:A = F(V, !.A),
+    !:A = assoc_list.foldl_values(F, KVs, !.A).
 
 foldl_values(_P, [], !A).
 foldl_values(P, [KV | KVs], !A) :-
